--- a/config/development.yaml
+++ b/config/development.yaml
@@ -2,5 +2,5 @@
 domain: "samples-domain"
 service: "cadence-frontend"
 host: "127.0.0.1:7933"
-workerMetrics:
+prometheus:
   listenAddress: "127.0.0.1:9098"
