--- a/config/development.yaml
+++ b/config/development.yaml
@@ -2,3 +2,6 @@
 domain: "samples-domain"
 service: "cadence-frontend"
 host: "127.0.0.1:7933"
+# config for emitting metrics
+#prometheus:
+#  listenAddress: "127.0.0.1:9098"
