--- a/cmd/samples/pageflow/package.json
+++ b/cmd/samples/pageflow/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
