--- a/cmd/samples/pageflow/package.json
+++ b/cmd/samples/pageflow/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "cadence-web": "^3.23.2",
     "connected-react-router": "^6.9.1",
     "fastify": "^3.14.0",
     "fastify-cors": "^5.2.0",
@@ -31,7 +32,7 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "install": "napa && rm -rf src/server/idl && cp -R node_modules/cadence-idl/thrift src/server/idl",
+    "_install": "napa && rm -rf src/server/idl && cp -R node_modules/cadence-idl/thrift src/server/idl",
     "start": "npm run start-server & npm run start-ui",
     "start-ui": "react-scripts start",
     "start-server": "node src/server",
